fix for flicker

--- a/css/custom.css
+++ b/css/custom.css
@@ -27,7 +27,7 @@ header {
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     z-index: 0;
-    object-fit: contain;
+    object-fit: scale-down;
 }
 
 #container div {
